--- a/commons-vfs2-sandbox/pom.xml
+++ b/commons-vfs2-sandbox/pom.xml
@@ -43,9 +43,8 @@
       <artifactId>commons-logging</artifactId>
     </dependency>
     <dependency>
-      <groupId>jcifs</groupId>
+      <groupId>org.codelibs</groupId>
       <artifactId>jcifs</artifactId>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>commons-httpclient</groupId>
