--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <module>commons-vfs2-jackrabbit2</module>
     <module>commons-vfs2-examples</module>
     <module>commons-vfs2-distribution</module>
+    <module>commons-vfs2-sandbox</module>
   </modules>
   <!-- commons-vfs2-sandbox is in profile include-sandbox -->
 
@@ -517,9 +518,9 @@
         <version>0.1.55</version>
       </dependency>
       <dependency>
-        <groupId>jcifs</groupId>
+        <groupId>org.codelibs</groupId>
         <artifactId>jcifs</artifactId>
-        <version>1.3.17</version>
+        <version>2.1.26</version>
       </dependency>
       <dependency>
         <groupId>com.sun.mail</groupId>
